fix white space, overflow-x hidden

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     color: #34495e;
+    overflow-x: hidden;
 }
 
 .container {
